--- a/testing.ipynb
+++ b/testing.ipynb
@@ -361,7 +361,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -372,62 +372,79 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "initial_guess = [0.8, 0.0]\n",
-    "result = minimize(function_to_minimize, initial_guess)\n",
-    "\n",
-    "optimal_scale, optimal_offset = result.x"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 78,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "scale = np.linspace(0.5, 1.5, 1457)\n",
-    "offset = np.linspace(-0.5, 0.5, 1457)\n",
-    "\n",
-    "X, Y = np.meshgrid(scale, offset)\n",
-    "\n",
-    "Z = np.zeros((1457, 1457))\n",
-    "\n",
-    "for i in range(1457):\n",
-    "    for j in range(1457):\n",
-    "        Z[i, j] = function_to_minimize([X[i, j], Y[i, j]])\n",
-    "\n",
-    "#func = (weight * transformed_points[1][:, 2] - (depth_map_points * scale + offset))**2"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 108,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(1457,)"
+       "5349.557814749177"
       ]
      },
-     "execution_count": 79,
+     "execution_count": 108,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "func.shape"
+    "samples = 100\n",
+    "\n",
+    "scale = np.linspace(0.5, 1.5, samples)\n",
+    "offset = np.linspace(-0.5, 0.5, samples)\n",
+    "\n",
+    "X, Y = np.meshgrid(scale, offset)\n",
+    "\n",
+    "Z = np.zeros((samples, samples))\n",
+    "\n",
+    "for i in range(samples):\n",
+    "    for j in range(samples):\n",
+    "        Z[i, j] = function_to_minimize([X[i, j], Y[i, j]])\n",
+    "\n",
+    "Z.min()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 109,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "min_index = np.argmin(Z)\n",
+    "i_min, j_min = np.unravel_index(min_index, Z.shape)\n",
+    "\n",
+    "# Get the corresponding scale and offset values\n",
+    "optimal_scale = X[i_min, j_min]\n",
+    "optimal_offset = Y[i_min, j_min]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 112,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "diff = weight * transformed_points[1][:, 2] - (depth_map_points * optimal_scale + optimal_offset)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 114,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.008358338330415858"
+      ]
+     },
+     "execution_count": 114,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "diff.mean()"
+   ]
   }
  ],
  "metadata": {
